# gastrotech_website

./: .gitattributes  .gitignore  AGENTS.md  README.md  deploy_fix.sh  footer_old_ref.tsx  old_tree.txt
backend/: .dockerignore  .env.example  .gitignore  700_series_merge_plan.json  FIXES_APPLIED_2026-01-14.md  Gastrotech_Tum_Veriler.xlsx  PDF_ANALIZ_PROMPTU.md  Procfile  README.md  SMOKE_TEST_REPORT.md  TEST_SMART_MODE_DATA.py  VERIFY_SMART_MODE.md  analyze_products.py  analyze_unmatched.py  audit_pisirme.py  audit_recent_images.py  auto_cleanup.py  catalog_audit.py  category_analysis.txt  check_coffee.py  check_coffee_detailed.py  check_firinlar_simple.py  check_hazirlik_state.py  check_intersection.py  check_intersection_v2.py  check_ovens.py  check_ovens_v2.py  check_vital_logo.py  cleanup_database.py  cleanup_orphans.py  clear_db_script.py  compare_products.py  comprehensive_audit.py  create_missing_brands.py  create_missing_categories.py  create_template.py  db.sqlite3  debug_import.py  debug_product.py  debug_product_view.py  (+47 more)
backend/.github/workflows/: ci.yml
backend/apps/: __init__.py
backend/apps/accounts/: __init__.py  admin.py  apps.py  managers.py  models.py  serializers.py  views.py
backend/apps/api/: __init__.py  apps.py  permissions.py
backend/apps/api/v1/: urls.py  (+1 more)
backend/apps/blog/: __init__.py  admin.py  admin_urls.py  models.py  serializers.py  urls.py  views.py
backend/apps/catalog/: __init__.py  admin.py  admin_api.py  admin_search.py  admin_serializers.py  admin_urls.py  admin_viewsets.py  apps.py  cache_keys.py  filters.py  forms.py  models.py  models_qr.py  pagination.py  plp.py  qr_api.py  query_utils.py  serializers.py  signals.py  stats_api.py  tests.py  urls.py  views.py
backend/apps/common/: __init__.py  apps.py  canonical.py  logging.py  middleware.py  models.py  serializers.py  slugify_tr.py  utils.py
backend/apps/inquiries/: __init__.py  admin.py  admin_api.py  admin_serializers.py  admin_urls.py  apps.py  models.py  serializers.py  tests.py  tests_quote_compose.py  urls.py  views.py
backend/apps/ops/: admin.py  apps.py  import_api.py  import_serializers.py  models.py  serializers.py  urls.py  views.py
backend/apps/orders/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  logging_config.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/docker/nginx/: nginx.conf
backend/docker/web/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh
backend/docs/: DEPLOYMENT.md  RELEASE_CHECKLIST.md
backend/fixtures/: catalog_metadata.json  full_site_data.json
backend/management_scripts/: reset_categories.py
backend/scripts/: analyze_700_series.py  analyze_json_files.py  analyze_media_health.py  analyze_unmatched.py  audit_900_series_images.py  audit_dropin_images.py  audit_electrolux_images.py  check_case_sensitivity.py  check_db_state.py  check_db_status.py  check_duplicates.py  check_firinlar.py  check_labels.py  check_media_count.py  check_media_dupes.py  check_product_distribution.py  check_product_linkage.py  check_remaining_orphans.py  check_series.py  check_status.py  check_unused_files.py  clear_cache.py  clear_nav_cache.py  complete_import_and_restore.py  create_initial_categories.py  debug_catalogs.py  debug_empty_categories.py  debug_hazirlik.py  debug_imports.py  debug_product_391155.py  detailed_duplicates_check.py  execute_merge.py  find_hazirlik_products.py  fix_broken_media.py  fix_catalog_mapping.py  fix_import_errors.py  fix_product_391155.py  fuzzy_match.py  global_search.py  import_all_products.py  (+23 more)
(+501 files in other folders)
