# Gastrotech Backend - Python Project Configuration
# 
# Tools configured:
# - ruff: Fast Python linter (replaces flake8, isort, etc.)
# - black: Code formatter
# - pytest: Test runner (optional, if migrating from Django test)

[project]
name = "gastrotech-backend"
version = "1.0.0"
description = "Gastrotech B2B Catalog Backend API"
requires-python = ">=3.12"

# =============================================================================
# Black Configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    # Default excludes
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    # Project-specific
    | migrations
    | staticfiles
    | media
)/
'''

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100

# Exclude paths
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "staticfiles",
    "media",
    "*.pyc",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from within except
    "ARG001", # unused function argument (common in Django views)
    "ARG002", # unused method argument (common in Django methods)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, etc.
"**/tests/**/*.py" = ["S101", "ARG", "PLR2004"]
"**/tests.py" = ["S101", "ARG", "PLR2004"]
# Settings files have star imports
"**/settings/*.py" = ["F401", "F403", "F405"]
# Admin files may have unused imports
"**/admin.py" = ["F401"]
# Init files may have unused imports
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

# =============================================================================
# Pytest Configuration (optional, for future migration)
# =============================================================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--reuse-db",
    "-v",
]

# =============================================================================
# Coverage Configuration (optional)
# =============================================================================
[tool.coverage.run]
source = ["apps"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
